# hush.cpp

./: .gitignore  CMakeLists.txt  PROJECT_OVERVIEW.md  README.md
examples/hush-android/: README.md  build.gradle.kts  local.properties  settings.gradle.kts
examples/hush-android/app/: build.gradle.kts
examples/hush-android/app/src/main/: AndroidManifest.xml
examples/hush-android/app/src/main/java/klama/hush/: MainActivity.kt
examples/hush-android/hush/: build.gradle.kts
examples/hush-android/hush/src/main/cpp/: CMakeLists.txt  HushJni.cpp
examples/hush-android/hush/src/main/java/klama/hush/: Hush.kt
examples/hush-jvm/: README.md  build.gradle.kts  settings.gradle.kts
examples/hush-jvm/app/: build.gradle.kts
examples/hush-jvm/app/src/main/kotlin/klama/hush/: Main.kt  TerminalRecorder.kt
examples/hush-jvm/hush/: build.gradle.kts
examples/hush-jvm/hush/src/main/cpp/: CMakeLists.txt  HushJni.cpp
examples/hush-jvm/hush/src/main/kotlin/klama/hush/engine/: Hush.kt  HushRecorder.kt
examples/hush-kmp/: build.gradle.kts  gradle.properties  settings.gradle.kts
examples/hush-kmp/gradle/: libs.versions.toml
examples/hush-kmp/hush/: build.gradle.kts
examples/hush-kmp/hush/src/androidMain/kotlin/klama/hush/audio/: AndroidAudioRecorder.kt
examples/hush-kmp/hush/src/androidMain/kotlin/klama/hush/engine/: Hush.kt
examples/hush-kmp/hush/src/androidMain/kotlin/myai/hush/engine/: Hush.kt  HushPlayer.kt  HushRecorder.kt  HushUtils.kt
examples/hush-kmp/hush/src/androidNativeArm64Main/kotlin/klama/hush/engine/: Hush.kt  HushJni.kt
examples/hush-kmp/hush/src/androidNativeArm64Main/kotlin/myai/hush/engine/: Hush.kt  HushPlayer.kt  HushRecorder.kt  HushUtils.kt
examples/hush-kmp/hush/src/androidNativeX64Main/kotlin/myai/hush/engine/: HushJni.kt
examples/hush-kmp/hush/src/commonMain/kotlin/klama/hush/audio/: AudioRecorder.kt
examples/hush-kmp/hush/src/commonMain/kotlin/klama/hush/engine/: Hush.kt
examples/hush-kmp/hush/src/commonMain/kotlin/myai/hush/engine/: Hush.kt  HushPlayer.kt  HushRecorder.kt  HushUtils.kt
examples/hush-kmp/hush/src/jvmMain/kotlin/klama/hush/audio/: JvmAudioRecorder.kt
examples/hush-kmp/hush/src/jvmMain/kotlin/klama/hush/engine/: Hush.kt
examples/hush-kmp/hush/src/jvmMain/kotlin/myai/hush/engine/: Hush.kt  HushPlayer.kt  HushRecorder.kt  HushUtils.kt
examples/hush-kmp/hush/src/linuxX64Main/kotlin/klama/hush/engine/: Hush.kt  HushJni.kt
examples/hush-kmp/hush/src/linuxX64Main/kotlin/myai/hush/engine/: Hush.kt  HushJni.kt
examples/hush-kmp/hush/src/nativeInterop/cinterop/: hush.def  hush_android.def  jni.def  jni_android.def
examples/hush-kmp/samples/hush-kmp-app/androidApp/: build.gradle.kts
examples/hush-kmp/samples/hush-kmp-app/androidApp/src/main/: AndroidManifest.xml
examples/hush-kmp/samples/hush-kmp-app/androidApp/src/main/kotlin/klama/hush/kmp/android/: MainActivity.kt
examples/hush-kmp/samples/hush-kmp-app/androidApp/src/main/kotlin/myai/hush/kmp/android/: MainActivity.kt
examples/hush-kmp/samples/hush-kmp-app/commonApp/: build.gradle.kts
examples/hush-kmp/samples/hush-kmp-app/commonApp/src/androidMain/kotlin/klama/hush/kmp/: AndroidImplementations.kt
examples/hush-kmp/samples/hush-kmp-app/commonApp/src/androidMain/kotlin/klama/hush/kmp/permissions/: AudioPermissionRequester.kt
examples/hush-kmp/samples/hush-kmp-app/commonApp/src/androidMain/kotlin/myai/hush/kmp/: AndroidImplementations.kt
examples/hush-kmp/samples/hush-kmp-app/commonApp/src/androidMain/kotlin/myai/hush/kmp/permissions/: AudioPermissionRequester.kt
examples/hush-kmp/samples/hush-kmp-app/commonApp/src/commonMain/kotlin/klama/hush/kmp/: App.kt  AppViewModel.kt  Expects.kt
examples/hush-kmp/samples/hush-kmp-app/commonApp/src/commonMain/kotlin/klama/hush/kmp/permissions/: AudioPermissionRequester.kt
examples/hush-kmp/samples/hush-kmp-app/commonApp/src/commonMain/kotlin/myai/hush/kmp/: App.kt  AppViewModel.kt  Expects.kt
examples/hush-kmp/samples/hush-kmp-app/commonApp/src/commonMain/kotlin/myai/hush/kmp/permissions/: AudioPermissionRequester.kt
examples/hush-kmp/samples/hush-kmp-app/commonApp/src/jvmMain/kotlin/klama/hush/kmp/: JvmImplementations.kt
examples/hush-kmp/samples/hush-kmp-app/commonApp/src/jvmMain/kotlin/klama/hush/kmp/permissions/: AudioPermissionRequester.kt
examples/hush-kmp/samples/hush-kmp-app/commonApp/src/jvmMain/kotlin/myai/hush/kmp/: JvmImplementations.kt
examples/hush-kmp/samples/hush-kmp-app/commonApp/src/jvmMain/kotlin/myai/hush/kmp/permissions/: AudioPermissionRequester.kt
examples/hush-kmp/samples/hush-kmp-app/desktopApp/: build.gradle.kts
examples/hush-kmp/samples/hush-kmp-app/desktopApp/src/jvmMain/kotlin/klama/hush/kmp/desktop/: Main.kt
examples/hush-kmp/samples/hush-kmp-app/desktopApp/src/jvmMain/kotlin/myai/hush/kmp/desktop/: Main.kt
examples/hush-kmp/samples/hush-kmp-cli/: build.gradle.kts
examples/hush-kmp/samples/hush-kmp-cli/src/main/kotlin/klama/hush/cli/: Main.kt
examples/hush-kmp/samples/hush-kmp-cli/src/main/kotlin/myai/hush/cli/: Main.kt
examples/hush-kmp/samples/hush-kmp-native/: build.gradle.kts
examples/hush-kmp/samples/hush-kmp-native/src/linuxX64Main/kotlin/klama/hush/native/: Main.kt
examples/hush-kmp/samples/hush-kmp-native/src/linuxX64Main/kotlin/myai/hush/native/: Main.kt
examples/hush-terminal-recorder/: CMakeLists.txt  main.cpp
include/codecs/: AudioProcessor.h
include/core/: AudioPlayer.h  AudioRecorder.h  FlowController.h  Logger.h  RingBuffer.h  SilenceDetector.h  StateManager.h  TtsEngine.h
include/ffi/: hush_api.h
src/cli/: main.cpp
src/codecs/: AudioProcessor.cpp
src/core/: AudioPlayer.cpp  AudioRecorder.cpp  FlowController.cpp  Logger.cpp  SilenceDetector.cpp  StateManager.cpp  TtsEngine.cpp
src/ffi/: hush_api.cpp
test/unit/: AudioProcessorTests.cpp  AudioRecorderTests.cpp  FlowControllerTests.cpp  LoggerTests.cpp  RingBufferTests.cpp  SilenceDetectorTests.cpp  StateManagerTests.cpp
